kubernetes/reverseproxy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: reverseproxy-pod
spec:
  tolerations:
    - key: node-role.kubernetes.io/control-plane
      operator: Exists
      effect: NoSchedule
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
  containers:
    - name: reverseproxy
      image: daafonsecato/kataterm-reverseproxy:v2
      ports:
        - containerPort: 7070
        - containerPort: 9090
      volumeMounts:
        - name: reverseproxy-volume
          mountPath: /app
  volumes:
    - name: reverseproxy-volume
      hostPath:
        path: /home/ubuntu/kataterm/reverseproxy
