kubernetes/scalable-be-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
spec:
  containers:
    - name: backend
      image: daafonsecato/kataterm-backend:v2
      ports:
        - containerPort: 8000
    - name: gitkatas
      image: daafonsecato/kataterm-gitkatas:v2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      ports:
        - containerPort: 7681
        - containerPort: 8080
        - containerPort: 8095
      volumeMounts:
        - name: gitkatas-exercise-volume
          mountPath: /home/git-katas-user/exercise
    - name: validator
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      image: daafonsecato/kataterm-validator:v2
      ports:
        - containerPort: 8096
  volumes:
    - name: gitkatas-exercise-volume
      emptyDir: {}
