kubernetes/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
spec:
  containers:
    - name: backend
      image: daafonsecato/kataterm-backend:v2
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: backend-volume
          mountPath: /mnt/gitkatas
    - name: gitkatas
      image: daafonsecato/kataterm-gitkatas:v2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      ports:
        - containerPort: 7681
        - containerPort: 8080
        - containerPort: 8095
      volumeMounts:
        - name: gitkatas-volume
          mountPath: /mnt/gitkatas
        - name: gitkatas-exercise-volume
          mountPath: /home/git-katas-user/exercise
    - name: validator
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      image: daafonsecato/kataterm-validator:v2
      ports:
        - containerPort: 8096
      volumeMounts:
        - name: validator-volume
          mountPath: /mnt/validator
        - name: validator-validation-volume
          mountPath: /validation
        - name: gitkatas-exercise-volume
          mountPath: /exercise
  volumes:
    - name: backend-volume
      hostPath:
        path: /home/ubuntu/kataterm/backend
    - name: gitkatas-volume
      hostPath:
        path: /home/ubuntu/kataterm/gitkatas
    - name: gitkatas-exercise-volume
      emptyDir: {}
    - name: validator-volume
      hostPath:
        path: /home/ubuntu/kataterm/validator
    - name: validator-validation-volume
      hostPath:
        path: /home/ubuntu/kataterm/ch1-git-katas/validation
---
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
spec:
  containers:
    - name: backend
      image: daafonsecato/kataterm-backend:v2
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: backend-volume
          mountPath: /mnt/gitkatas
    - name: gitkatas
      image: daafonsecato/kataterm-gitkatas:v2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      ports:
        - containerPort: 7681
        - containerPort: 8080
        - containerPort: 8095
      volumeMounts:
        - name: gitkatas-volume
          mountPath: /mnt/gitkatas
        - name: gitkatas-exercise-volume
          mountPath: /home/git-katas-user/exercise
    - name: validator
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      image: daafonsecato/kataterm-validator:v2
      ports:
        - containerPort: 8096
      volumeMounts:
        - name: validator-volume
          mountPath: /mnt/validator
        - name: validator-validation-volume
          mountPath: /validation
        - name: gitkatas-exercise-volume
          mountPath: /exercise
  volumes:
    - name: backend-volume
      hostPath:
        path: /home/ubuntu/kataterm/backend
    - name: gitkatas-volume
      hostPath:
        path: /home/ubuntu/kataterm/gitkatas
    - name: gitkatas-exercise-volume
      emptyDir: {}
    - name: validator-volume
      hostPath:
        path: /home/ubuntu/kataterm/validator
    - name: validator-validation-volume
      hostPath:
        path: /home/ubuntu/kataterm/ch1-git-katas/validation
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-pod
  ports:
    - name: port-8000
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ttyd-service
spec:
  selector:
    app: backend-pod
  ports:
    - name: port-7681
      protocol: TCP
      port: 7681
      targetPort: 7681
---
apiVersion: v1
kind: Service
metadata:
  name: codeeditor-service
spec:
  selector:
    app: backend-pod
  ports:
    - name: port-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
