kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverseproxy-service
spec:
  type: NodePort
  selector:
    app: reverseproxy-pod
  ports:
    - name: reverseproxy
      protocol: TCP
      port: 7070
      targetPort: 7070
      nodePort: 30007
    - name: labmanager
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30009
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres-pod
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
