kubernetes/route-frontend.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`frontend.terminal.kataterm.com`)
    kind: Rule
    services:
    - name: frontend
      port: 3000
